:bug: Button visible

--- a/css/focus.css
+++ b/css/focus.css
@@ -127,7 +127,7 @@
     font-size: 16px;
     cursor: pointer;
     background-color: #484848; /* Dark gray background */
-    color: white; /* White text */
+    color: white !important; /* White text */
     border: none;
     border-radius: 5px !important; 
     transition: background-color 0.3s ease;
